--- a/.github/workflows/opencode-review.yml
+++ b/.github/workflows/opencode-review.yml
@@ -82,11 +82,11 @@ jobs:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
         run: |
           DIFF_SNIPPET=$(head -500 /tmp/pr_diff.txt)
-          
+
           opencode run \
             --model "opencode/big-pickle" \
-            --agent "oracle" \
-            "Review this Pull Request. This is a consolidated PR that may contain multiple task implementations.
+            --agent "Sisyphus" \
+            "@oracle Review this Pull Request. This is a consolidated PR that may contain multiple task implementations.
 
           ## PR Title
           ${{ github.event.pull_request.title }}
@@ -217,6 +217,7 @@ jobs:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
           opencode run \
+            --agent "Sisyphus" \
             --model "opencode/big-pickle" \
             "Fix the issues identified in the review.
 
