fix: use correct agent name in workflows
OpenCode CLI uses the 'name' field from agent frontmatter, not 'id'.

Changed:
- opencode.yml: --agent "ci-orchestrator" → "CI Orchestrator"
- opencode-workers.yml: --agent "ci-orchestrator" → "CI Orchestrator"

Added:
- AGENT_NAME_FIX.md: Documentation of the fix and agent naming reference

This fixes the 'agent not found' error in GitHub Actions.

--- a/.github/workflows/opencode-workers.yml
+++ b/.github/workflows/opencode-workers.yml
@@ -107,8 +107,9 @@ jobs:
           ISSUE_NUMBER: ${{ steps.payload.outputs.issue_number }}
         run: |
           # Run CI Orchestrator agent
+          # Note: Use the exact "name" from agent frontmatter, not "id"
           opencode run \
-            --agent "ci-orchestrator" \
+            --agent "CI Orchestrator" \
             --model "opencode/big-pickle" \
             "Execute complete CI workflow for this GitHub issue.
           
