--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,6 @@
 # Use bd merge for beads JSONL files
 
 # Use bd merge for beads JSONL files
+
+# Use bd merge for beads JSONL files
+.beads/issues.jsonl merge=beads
